@@ -1,3 +1,10 @@
+2007-12-21	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	PR 1268/cpukit
+	* libcsupport/include/rtems/assoc.h,
+	rtems/src/semtranslatereturncode.c: There is no
+	rtems_assoc_ptr_by_value method.
+
 2007-12-16	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* configure.ac: Revert Joel's 2007-06-13 NDEBUG patch.
